--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,50 @@
+/* ROOT */
+:root {
+  --accent-color: #ff7500;
+  --accent-color-light: rgb(255, 117, 0, 0.2);
+
+  --text-color-dark: #000;
+  --text-color-white: #fff;
+  --text-color-light: #252420;
+}
+
+/* FONTS */
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/') format('woff2'),
+    url('../fonts/Roboto-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed';
+  src: url('../fonts/RobotoCondensed-Bold.woff2') format('woff2'),
+    url('../fonts/RobotoCondensed-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Medium.woff2') format('woff2'),
+    url('../fonts/Roboto-Medium.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.woff2') format('woff2'),
+    url('../fonts/Roboto-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* GLOBAL */
 html {
   box-sizing: border-box;
@@ -17,7 +64,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial", sans-serif;
+  font-family: 'Arial', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
@@ -28,7 +75,42 @@ img {
   max-width: 100%;
   height: auto;
 }
-
+.button {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 0.5px;
+  color: #ffffff;
+  padding: 12px 24px;
+  border-radius: 4px;
+  text-decoration: none;
+  display: inline-block;
+}
+.button:hover {
+  opacity: 0.5;
+}
+.button:active {
+  opacity: 0.6;
+}
+.button--orange {
+  background-color: var(--accent-color);
+}
+.hero__line {
+  margin-bottom: 40px;
+}
+.features__line {
+  margin-bottom: 24px;
+}
+.line {
+  margin-left: 0;
+  width: 80px;
+  height: 3px;
+  margin-top: 0;
+  border: transparent;
+  background-color: var(--accent-color);
+}
 
 /* AUTOFILL-STYLES */
 /*input:-webkit-autofill,
@@ -45,7 +127,6 @@ select:-webkit-autofill:focus {
   -webkit-box-shadow: 0 0 0px 1000px #fff inset;
 }*/
 
-
 /* PLACEHOLDER-STYLES */
 /*::-webkit-input-placeholder,
 ::-moz-placeholder,
@@ -54,7 +135,6 @@ select:-webkit-autofill:focus {
   color: rgba(52, 49, 61, 0.5);
   opacity: 1;
 }*/
-
 
 /* VISUALLY-HIDDEN */
 .visually-hidden {
@@ -68,29 +148,348 @@ select:-webkit-autofill:focus {
   overflow: hidden;
 }
 
-
 /* CONTAINER */
 .container {
   width: 100%;
-  max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  max-width: 1140px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
-
 
 /* MAIN-CONTENT */
 .main-content {
   flex-grow: 1;
 }
 
-@media
-only screen and (-webkit-min-device-pixel-ratio: 2),
-only screen and (   min--moz-device-pixel-ratio: 2),
-only screen and (     -o-min-device-pixel-ratio: 2/1),
-only screen and (        min-device-pixel-ratio: 2),
-only screen and (                min-resolution: 192dpi),
-only screen and (                min-resolution: 2dppx) {
+/* SITE HEADER */
 
+.site-header {
+  padding-top: 16px;
+  padding-bottom: 16px;
+  border-top: 5px solid var(--accent-color);
+}
+.site-header__container {
+  display: flex;
+  align-items: center;
+}
+.site-header__logo {
+  margin-right: auto;
+}
+.logo {
+  text-decoration: none;
+  display: inline-block;
+}
+.logo:hover {
+  opacity: 0.7;
+}
+.logo:active {
+  opacity: 0.6;
+}
+.logo__img {
+  width: 227px;
+  height: 59.18px;
+  object-fit: contain;
+}
+.site-header__nav {
+  margin-right: 32px;
+}
+.nav__list {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.nav__item:not(:last-child) {
+  margin-right: 32px;
+}
+.nav__item {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 13px;
+  line-height: 15px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.nav__link {
+  color: var(--text-color-dark);
+  display: inline-block;
+  text-decoration: none;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-bottom: 3px solid transparent;
+}
+.nav__link:hover {
+  color: var(--accent-color);
+  padding-top: 4px;
+  padding-bottom: 4px;
+  border-bottom: 3px solid var(--accent-color);
+}
+.nav__link:active {
+  opacity: 0.6;
+}
+
+/* HERO */
+
+.hero {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-color: var(--text-color-light);
+}
+.hero__inner {
+  position: relative;
+}
+.hero__content {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  width: 100%;
+  max-width: 387px;
+}
+
+.hero__title {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 24px;
+}
+.hero__link {
+  color: var(--text-color-white);
+  text-decoration: none;
+}
+.hero__text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.5px;
+  color: var(--text-color-white);
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+.hero__img {
+  width: 510px;
+  height: 510px;
+  border-radius: 8px;
+  display: flex;
+  position: absolute;
+  top: -40px;
+  right: 0;
+  box-shadow: 24px 24px 0px rgba(255, 117, 0, 0.6);
+}
+
+/* FEAATURES */
+
+.features {
+  padding-top: 218px;
+  padding-bottom: 207px;
+}
+
+.features__title {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 72px;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+  margin-top: 0;
+  margin-bottom: 72px;
+}
+.features__link {
+  color: var(--text-color-dark);
+  text-decoration: none;
+  display: inline-block;
+}
+.features__list {
+  display: flex;
+  align-items: flex-start;
+  margin: 0;
+  padding: 0;
+}
+.features__item:not(:last-child) {
+  margin-right: 40px;
+}
+.item-features {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 340px;
+}
+.item-features__img-wrapper {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  background-color: var(--accent-color-light);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+.item-features__img {
+  width: 56px;
+  height: 56px;
+  display: block;
+  object-fit: contain;
+}
+.item-features__title {
+  margin-top: 0;
+  margin-bottom: 12px;
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+}
+.item-features__link {
+  color: var(--text-color-dark);
+  text-decoration: none;
+  display: inline-block;
+}
+.item-features__text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.5px;
+  color: var(--text-color-dark);
+  margin: 0;
+}
+
+/* PROMO */
+.promo {
+  padding-top: 123px;
+  padding-bottom: 160px;
+}
+
+.promo__inner {
+  padding: 64px;
+  background-color: var(--text-color-light);
+  position: relative;
+  border-radius: 12px;
+}
+.content-promo__title {
+  font-family: 'Roboto Condensed';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  letter-spacing: 0.5px;
+  color: var(--text-color-white);
+}
+.content-promo__text {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.5px;
+  color: var(--text-color-white);
+}
+.promo__img {
+  width: 440px;
+  height: 440px;
+  border-radius: 12px;
+  position: absolute;
+  right: 64px;
+  top: -64px;
+}
+
+.site-footer {
+  padding-top: 56px;
+  padding-bottom: 56px;
+  background-color: #f8f8f8;
+}
+
+.site-footer__top {
+  padding-bottom: 40px;
+  border-bottom: 2px solid rgb(0, 0, 0, 0.5);
+}
+.top-footer {
+  display: flex;
+  align-items: center;
+}
+.top-footer__logo {
+  margin-right: auto;
+}
+.top-footer__socials {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.top-footer__social {
+  display: flex;
+}
+.top-footer__social:not(:last-child) {
+  margin-right: 16px;
+}
+.top-footer__social-link {
+  text-decoration: none;
+  display: inline-block;
+  color: #000;
+}
+.top-footer__social-link:hover {
+  opacity: 0.6;
+}
+.top-footer__social-img {
+  width: 24px;
+  height: 24px;
+  display: block;
+  object-fit: contain;
+}
+.site-footer__bottom {
+  padding-top: 64px;
+}
+.bottom-footer {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 19px;
+}
+.bottom-footer__lists {
+  display: flex;
+  align-items: flex-start;
+}
+.bottom-footer__list {
+  display: flex;
+  flex-direction: column;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  max-width: 224px;
+}
+.bottom-footer__list:not(:last-child) {
+  margin-right: 68px;
+}
+.bottom-footer__item:not(:last-child) {
+  margin-bottom: 16px;
+}
+.bottom-footer__link {
+  display: inline-block;
+  text-decoration: none;
+  list-style-type: none;
+  color: #252420;
+}
+.bottom-footer__link:hover {
+  color: var(--accent-color);
+}
+@media only screen and (-webkit-min-device-pixel-ratio: 2),
+  only screen and (min--moz-device-pixel-ratio: 2),
+  only screen and (-o-min-device-pixel-ratio: 2/1),
+  only screen and (min-device-pixel-ratio: 2),
+  only screen and (min-resolution: 192dpi),
+  only screen and (min-resolution: 2dppx) {
 }
